--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -533,6 +533,8 @@ table.dataTable thead .sorting_desc_disabled:before {
 
 .comment_update_input, .actualVersion_update_input, .comment_input {
   min-width: 10em !important;
+  width: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0) !important;
 }
 .comment_update_input:active, .actualVersion_update_input:active, .comment_input:active {
   background-color: rgba(241, 135, 65, 0.5960784314) !important;
