--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -618,6 +618,7 @@ background: #eee;
 
 .comment_update_input, .actualVersion_update_input, .comment_input {
     min-width: 10em !important;
+    width: 100%;
     //background-color: #ffffff !important;
     &:active {
         //background-color: #ffffff !important;
@@ -627,6 +628,7 @@ background: #eee;
         //background-color: #ffffff !important;
         background-color:#f1874198 !important;
     }
+    box-shadow: 0px 0px 0px 0px rgba(0,0,0,0) !important;
 }
 
 /* PASSWORD CHECK */
