--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,6 +17,9 @@
   border-color: var(--bs-body-color);
   box-shadow: 0px 0px 0px 5px rgba(241, 135, 65, 0.6274509804);
 }
+:root .modal-content, [data-bs-theme=light] .modal-content {
+  max-width: 50em;
+}
 :root .modal-btn, [data-bs-theme=light] .modal-btn {
   --bs-btn-color: #000000;
   box-shadow: var(--box-shadow);
