--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -53,6 +53,9 @@ $hover-shadow-light : 0px 0px 20px 0px #0000007d;
 
     --box-shadow:  5px 5px 10px #5a5a5a, -5px -5px 10px #ffffff;
 
+    .modal-content {
+        max-width: 50em;
+    }
     .modal-btn {
         --bs-btn-color: #000000;
         //--bs-btn-bg:var(--bs-tertiary-bg);
