--- a/templates/client/register.html.twig
+++ b/templates/client/register.html.twig
@@ -79,7 +79,7 @@
                 </div>
                 <div class="d-flex justify-content-around align-items-center w-100 p-0 flex-wrap">
                     <p class="mb-1 text-nowrap">Already registered ?</p>
-                    <a class="btn btn-secondary txt-white mb- btn-login" href="{{ path('app_client_login') }}">Login</a>
+                    <a class="btn btn-secondary txt-white mb-1 btn-login" href="{{ path('app_client_login') }}">Login</a>
                 </div>
             {{ form_end(registrationForm) }}
         </div>
