--- a/templates/device.html.twig
+++ b/templates/device.html.twig
@@ -108,8 +108,8 @@
                                             {#TODO Progress bar#}
                                             
                                             <td class="text-center">
-                                                <div class="progress rounded-2 progress-small form-control">
-                                                    <div class="progress-bar viride dark-1" style="width: {{device.download}}%">{{ device.download > 0 ? device.download : '' }}
+                                                <div class="progress progress-small">
+                                                    <div class="progress-bar" style="width: {{device.download}}%">{{ device.download > 0 ? device.download : '' }}
                                                     </div>
                                                 </div>
                                             </td>
