--- a/templates/sn/dashboard.html.twig
+++ b/templates/sn/dashboard.html.twig
@@ -1,2 +1,28 @@
 <hr class="w-100 mt-5">
 <span id="snDashboard" class="d-flex text-nowrap justify-content-left align-items-center w-100 mb-5"><svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg><h2 class="text-uppercase ms-1 mb-0" style="font-size: 21px;">Dashboard</h2></span>
+<div class="row d-flex justify-content-around">
+    <div class="col">
+    <h6 class="m-0 text-center">All Devices</h6>
+    {{ render_chart(snChart) }}
+    </div>
+    <div id="carouselExample" class="carousel slide col">
+        <div class="carousel-inner">
+        {% for key, chart in chartArray %}
+            <div class="carousel-item {{(key =='BACK WINBACK')? 'active':''}}">
+                <div class="d-flex justify-content-between align-items-center my-2">
+                    <button class="carousel-control-next btn btn-outline-orange" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                        <i class="fa-solid fa-angle-left"></i>
+                    </button>
+                    <h6 class="m-0">{{key}}</h6>
+                    <button class="carousel-control-next btn btn-outline-orange" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                        <i class="fa-solid fa-angle-right"></i>
+                    </button>
+                </div>
+                {{render_chart(chart)}}
+            </div>
+        
+
+        {% endfor %}
+        </div>
+    </div>
+</div>
