--- a/templates/sn/dashboard.html.twig
+++ b/templates/sn/dashboard.html.twig
@@ -2,8 +2,8 @@
 <span id="snDashboard" class="d-flex text-nowrap justify-content-left align-items-center w-100 mb-5"><svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg><h2 class="text-uppercase ms-1 mb-0" style="font-size: 21px;">Dashboard</h2></span>
 <div class="row d-flex justify-content-around">
     <div class="col">
-    <h6 class="m-0 text-center">All Devices</h6>
-    {{ render_chart(snChart) }}
+        <h6 class="my-2 py-2 text-center">All Devices</h6>
+        {{ render_chart(snChart) }}
     </div>
     <div id="carouselExample" class="carousel slide col">
         <div class="carousel-inner">
