--- a/templates/sn.html.twig
+++ b/templates/sn.html.twig
@@ -41,7 +41,7 @@
                                             <td class="text-center text-nowrap">{{item.sn}}</td>
                                             <td class="text-center">{{item.device}}</td>
                                             <td class="text-center">{{item.subtype}}</td>
-                                            <td class="text-center">{{item.date|format_datetime('short', 'none', locale='fr')}}</td>
+                                            <td class="text-center">{{item.creationDate|format_datetime('short', 'none', locale='fr')}}</td>
                                             <td class="text-center">{{item.country}}</td>
                                         </tr>
                                         
