--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -702,24 +702,24 @@ background: #eee;
     box-shadow: 0px 0px 35px 0px #FF52244e;
 }
 
-.log_percentage_cet_deep {
+.log_percentage_CET {
     background-color: #fe8c22cc;
     -webkit-box-shadow: 0px 0px 35px 0px #fe8c224e; 
     box-shadow: 0px 0px 35px 0px #FE8D224e;
 }
 
-.log_percentage_ret {
+.log_percentage_RET {
     background-color: #391fff;
     -webkit-box-shadow: 0px 0px 35px 0px #3A1fff4e; 
     box-shadow: 0px 0px 35px 0px #3A1FFF4e;
 }
 
-.log_percentage_hi {
+.log_percentage_HI-TENS {
     background-color: #00fff7a2;
     -webkit-box-shadow: 0px 0px 35px 0px #00FFF84e; 
     box-shadow: 0px 0px 35px 0px #00FFF84e;
 }
-.log_percentage_ems {
+.log_percentage_HI-EMS {
     background-color: #6EB0FFa2;
     -webkit-box-shadow: 0px 0px 35px 0px #6EB0FF4e; 
     box-shadow: 0px 0px 35px 0px #6EB0FF4e;
