--- a/templates/device/_proto2.html.twig
+++ b/templates/device/_proto2.html.twig
@@ -1,12 +1,25 @@
 <div class="row d-flex justify-content-left">
-    <h4>Protocole 1 - 09:21 / 09:41</h4>
+    <h5><svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg> Patient 1 - 09:21 / 09:41</h5>
     <div class="table-responsive">
         <table class="table table-bordered table-device-mode text-center ">
+            <thead>
+                <tr>
+                    <td class="fw-bold" rowspan="2">Step</td>
+                    <td class="fw-bold" rowspan="2">Out</td>
+                    <td colspan="3" class="fw-bold">Mode Parameters</td>
+                    <td class="fw-bold" rowspan="2">Time (minutes)</td>
+                </tr>
+                <tr>
+                    <td class="fw-bold">Mode</td>
+                    <td class="fw-bold">Param 1</td>
+                    <td class="fw-bold">Param 2</td>
+                </tr>
+            </thead>
             <tbody>
                 <tr>
-                    <td rowspan="4"><span class="h5">Step 1</span></td>
+                    <td rowspan="4"><span class="h5">1</span></td>
                     <td rowspan="2" class="h6">Way 1</td>
-                    <td><span class="log_percentage log_percentage_cet_deep log_percentage_select text-light-emphasis h6">CET</span></td>
+                    <td><span class="log_percentage log_percentage_CET log_percentage_select text-light-emphasis h6">CET</span></td>
                     <td class="d-flex flex-column">
                     <span class="text-light-emphasis badge badge-light h6 mb-0">SOFT</span>
                     <span class="text-light-emphasis badge badge-light h6 mb-0">MEDIUM</span>
@@ -15,7 +28,7 @@
                     <td class="h6">10'</td>
                 </tr>
                 <tr>
-                    <td><span class="log_percentage log_percentage_hi log_percentage_select text-light-emphasis h6 text-nowrap">HI-TENS</span></td>
+                    <td><span class="log_percentage log_percentage_HI-TENS log_percentage_select text-light-emphasis h6 text-nowrap">HI-TENS</span></td>
                     <td class="d-flex flex-column">
                     <span class="text-light-emphasis badge badge-light h6 mb-0">DYN</span>
                     </td>
@@ -24,7 +37,7 @@
                 </tr>
                 <tr>
                     <td rowspan="2" class="h6">Way 2</td>
-                    <td><span class="log_percentage log_percentage_ret log_percentage_select text-light-emphasis h6">RET</span></td>
+                    <td><span class="log_percentage log_percentage_RET log_percentage_select text-light-emphasis h6">RET</span></td>
                     <td class="d-flex flex-column">
                     <span class="text-light-emphasis badge badge-light h6 mb-0">SOFT</span>
                     <span class="text-light-emphasis badge badge-light h6 mb-0">MEDIUM</span>
@@ -33,7 +46,7 @@
                     <td class="h6">10'</td>
                 </tr>
                 <tr>
-                    <td><span class="log_percentage log_percentage_hi log_percentage_select text-light-emphasis h6 text-nowrap">HI-TENS</span></td>
+                    <td><span class="log_percentage log_percentage_HI-TENS log_percentage_select text-light-emphasis h6 text-nowrap">HI-TENS</span></td>
                     <td class="d-flex flex-column">
                     <span class="text-light-emphasis badge badge-light h6 mb-0">CHRONIC</span>
                     </td>
@@ -43,9 +56,9 @@
             </tbody>
             <tbody>
                 <tr>
-                    <td rowspan="2"><span class="h5">Step 2</span></td>
+                    <td rowspan="2"><span class="h5">2</span></td>
                     <td rowspan="2" class="h6">Way 1</td>
-                    <td><span class="log_percentage log_percentage_ret log_percentage_select text-light-emphasis h6">RET</span></td>
+                    <td><span class="log_percentage log_percentage_RET log_percentage_select text-light-emphasis h6">RET</span></td>
                     <td class="d-flex flex-column">
                     <span class="text-light-emphasis badge badge-light h6 mb-0">SOFT</span>
                     <span class="text-light-emphasis badge badge-light h6 mb-0">MEDIUM</span>
@@ -54,7 +67,7 @@
                     <td class="h6">10'</td>
                 </tr>
                 <tr>
-                    <td><span class="log_percentage log_percentage_hi log_percentage_select text-light-emphasis h6 text-nowrap">HI-TENS</span></td>
+                    <td><span class="log_percentage log_percentage_HI-TENS log_percentage_select text-light-emphasis h6 text-nowrap">HI-TENS</span></td>
                     <td class="d-flex flex-column">
                     <span class="text-light-emphasis badge badge-light h6 mb-0">CHRONIC</span>
                     </td>
@@ -67,14 +80,27 @@
 </div>
 <hr class="hr modal-device-hr mb-5" />
 <div class="row d-flex justify-content-left">
-    <h4>Protocole 2 - 10:02 / 10:17</h4>
+    <h5><svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg> Patient 2 - 10:02 / 10:17</h5>
     <div class="table-responsive">
         <table class="table table-bordered table-device-mode text-center ">
+            <thead>
+                <tr>
+                    <td class="fw-bold" rowspan="2">Step</td>
+                    <td class="fw-bold" rowspan="2">Out</td>
+                    <td colspan="3" class="fw-bold">Mode Parameters</td>
+                    <td class="fw-bold" rowspan="2">Time (minutes)</td>
+                </tr>
+                <tr>
+                    <td class="fw-bold">Mode</td>
+                    <td class="fw-bold">Param 1</td>
+                    <td class="fw-bold">Param 2</td>
+                </tr>
+            </thead>
             <tbody>
                 <tr>
-                    <td rowspan="4"><span class="h5">Step 1</span></td>
+                    <td rowspan="2"><span class="h5">1</span></td>
                     <td class="h6">Way 1</td>
-                    <td><span class="log_percentage log_percentage_cet_deep log_percentage_select text-light-emphasis h6">CET</span></td>
+                    <td><span class="log_percentage log_percentage_CET log_percentage_select text-light-emphasis h6">CET</span></td>
                     <td class="d-flex flex-column">
                     <span class="text-light-emphasis badge badge-light h6 mb-0">SOFT</span>
                     <span class="text-light-emphasis badge badge-light h6 mb-0">MEDIUM</span>
@@ -84,7 +110,7 @@
                 </tr>
                 <tr>
                     <td class="h6">Way 2</td>
-                    <td><span class="log_percentage log_percentage_cet_deep log_percentage_select text-light-emphasis h6">CET</span></td>
+                    <td><span class="log_percentage log_percentage_CET log_percentage_select text-light-emphasis h6">CET</span></td>
                     <td class="d-flex flex-column">
                     <span class="text-light-emphasis badge badge-light h6 mb-0">SOFT</span>
                     <span class="text-light-emphasis badge badge-light h6 mb-0">MEDIUM</span>
@@ -98,14 +124,27 @@
 </div>
 <hr class="hr modal-device-hr mb-5" />
 <div class="row d-flex justify-content-left">
-    <h4>Protocole 3 - 10:22 / 10:27</h4>
+    <h5><svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg> Patient 3 - 10:22 / 10:27</h5>
     <div class="table-responsive">
         <table class="table table-bordered table-device-mode text-center ">
+            <thead>
+                <tr>
+                    <td class="fw-bold" rowspan="2">Step</td>
+                    <td class="fw-bold" rowspan="2">Out</td>
+                    <td colspan="3" class="fw-bold">Mode Parameters</td>
+                    <td class="fw-bold" rowspan="2">Time (minutes)</td>
+                </tr>
+                <tr>
+                    <td class="fw-bold">Mode</td>
+                    <td class="fw-bold">Param 1</td>
+                    <td class="fw-bold">Param 2</td>
+                </tr>
+            </thead>
             <tbody>
                 <tr>
-                    <td rowspan="3"><span class="h5">Step 1</span></td>
+                    <td rowspan="2"><span class="h5">1</span></td>
                     <td class="h6">Way 1</td>
-                    <td><span class="log_percentage log_percentage_cet_deep log_percentage_select text-light-emphasis h6">CET</span></td>
+                    <td><span class="log_percentage log_percentage_CET log_percentage_select text-light-emphasis h6">CET</span></td>
                     <td class="d-flex flex-column">
                     <span class="text-light-emphasis badge badge-light h6 mb-0">SOFT</span>
                     <span class="text-light-emphasis badge badge-light h6 mb-0">MEDIUM</span>
@@ -115,7 +154,7 @@
                 </tr>
                 <tr>
                     <td class="h6">Way 2</td>
-                    <td><span class="log_percentage log_percentage_cet_deep log_percentage_select text-light-emphasis h6">CET</span></td>
+                    <td><span class="log_percentage log_percentage_CET log_percentage_select text-light-emphasis h6">CET</span></td>
                     <td class="d-flex flex-column">
                     <span class="text-light-emphasis badge badge-light h6 mb-0">SOFT</span>
                     <span class="text-light-emphasis badge badge-light h6 mb-0">MEDIUM</span>
@@ -129,14 +168,27 @@
 </div>
 <hr class="hr modal-device-hr mb-5" />
 <div class="row d-flex justify-content-left">
-    <h4>Protocole 4 - 11:37 / 11:53</h4>
+    <h5><svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg> Patient 4 - 11:37 / 11:53</h5>
     <div class="table-responsive">
         <table class="table table-bordered table-device-mode text-center ">
+            <thead>
+                <tr>
+                    <td class="fw-bold" rowspan="2">Step</td>
+                    <td class="fw-bold" rowspan="2">Out</td>
+                    <td colspan="3" class="fw-bold">Mode Parameters</td>
+                    <td class="fw-bold" rowspan="2">Time (minutes)</td>
+                </tr>
+                <tr>
+                    <td class="fw-bold">Mode</td>
+                    <td class="fw-bold">Param 1</td>
+                    <td class="fw-bold">Param 2</td>
+                </tr>
+            </thead>
             <tbody>
                 <tr>
-                    <td rowspan="4"><span class="h5">Step 1</span></td>
+                    <td rowspan="4"><span class="h5">1</span></td>
                     <td rowspan="2" class="h6">Way 1</td>
-                    <td><span class="log_percentage log_percentage_ret log_percentage_select text-light-emphasis h6">RET</span></td>
+                    <td><span class="log_percentage log_percentage_RET log_percentage_select text-light-emphasis h6">RET</span></td>
                     <td class="d-flex flex-column">
                     <span class="text-light-emphasis badge badge-light h6 mb-0">SOFT</span>
                     <span class="text-light-emphasis badge badge-light h6 mb-0">MEDIUM</span>
@@ -145,7 +197,7 @@
                     <td class="h6">15'</td>
                 </tr>
                 <tr>
-                    <td><span class="log_percentage log_percentage_hi log_percentage_select text-light-emphasis h6 text-nowrap">HI-TENS</span></td>
+                    <td><span class="log_percentage log_percentage_HI-TENS log_percentage_select text-light-emphasis h6 text-nowrap">HI-TENS</span></td>
                     <td class="d-flex flex-column">
                     <span class="text-light-emphasis badge badge-light h6 mb-0">DYN</span>
                     </td>
@@ -154,7 +206,7 @@
                 </tr>
                 <tr>
                     <td rowspan="2" class="h6">Way 2</td>
-                    <td><span class="log_percentage log_percentage_ret log_percentage_select text-light-emphasis h6">RET</span></td>
+                    <td><span class="log_percentage log_percentage_RET log_percentage_select text-light-emphasis h6">RET</span></td>
                     <td class="d-flex flex-column">
                     <span class="text-light-emphasis badge badge-light h6 mb-0">SOFT</span>
                     <span class="text-light-emphasis badge badge-light h6 mb-0">MEDIUM</span>
@@ -163,7 +215,7 @@
                     <td class="h6">15'</td>
                 </tr>
                 <tr>
-                    <td><span class="log_percentage log_percentage_hi log_percentage_select text-light-emphasis h6 text-nowrap">HI-TENS</span></td>
+                    <td><span class="log_percentage log_percentage_HI-TENS log_percentage_select text-light-emphasis h6 text-nowrap">HI-TENS</span></td>
                     <td class="d-flex flex-column">
                     <span class="text-light-emphasis badge badge-light h6 mb-0">DYN</span>
                     </td>
@@ -176,14 +228,27 @@
 </div>
 <hr class="hr modal-device-hr mb-5" />
 <div class="row d-flex justify-content-left">
-    <h4>Protocole 5 - 14:10 / 14:35</h4>
+    <h5><svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg> Patient 5 - 14:10 / 14:35</h5>
     <div class="table-responsive">
         <table class="table table-bordered table-device-mode text-center ">
+            <thead>
+                <tr>
+                    <td class="fw-bold" rowspan="2">Step</td>
+                    <td class="fw-bold" rowspan="2">Out</td>
+                    <td colspan="3" class="fw-bold">Mode Parameters</td>
+                    <td class="fw-bold" rowspan="2">Time (minutes)</td>
+                </tr>
+                <tr>
+                    <td class="fw-bold">Mode</td>
+                    <td class="fw-bold">Param 1</td>
+                    <td class="fw-bold">Param 2</td>
+                </tr>
+            </thead>
             <tbody>
                 <tr>
-                    <td rowspan="4"><span class="h5">Step 1</span></td>
+                    <td rowspan="2"><span class="h5">1</span></td>
                     <td class="h6">Way 1</td>
-                    <td><span class="log_percentage log_percentage_ret log_percentage_select text-light-emphasis h6">RET</span></td>
+                    <td><span class="log_percentage log_percentage_RET log_percentage_select text-light-emphasis h6">RET</span></td>
                     <td class="d-flex flex-column">
                     <span class="text-light-emphasis badge badge-light h6 mb-0">SOFT</span>
                     <span class="text-light-emphasis badge badge-light h6 mb-0">MEDIUM</span>
@@ -193,7 +258,7 @@
                 </tr>
                 <tr>
                     <td class="h6">Way 2</td>
-                    <td><span class="log_percentage log_percentage_ret log_percentage_select text-light-emphasis h6">RET</span></td>
+                    <td><span class="log_percentage log_percentage_RET log_percentage_select text-light-emphasis h6">RET</span></td>
                     <td class="d-flex flex-column">
                     <span class="text-light-emphasis badge badge-light h6 mb-0">SOFT</span>
                     <span class="text-light-emphasis badge badge-light h6 mb-0">MEDIUM</span>
@@ -204,9 +269,9 @@
             </tbody>
             <tbody>
                 <tr>
-                    <td rowspan="4"><span class="h5">Step 2</span></td>
+                    <td rowspan="4"><span class="h5">2</span></td>
                     <td rowspan="2" class="h6">Way 1</td>
-                    <td><span class="log_percentage log_percentage_ret log_percentage_select text-light-emphasis h6">RET</span></td>
+                    <td><span class="log_percentage log_percentage_RET log_percentage_select text-light-emphasis h6">RET</span></td>
                     <td class="d-flex flex-column">
                     <span class="text-light-emphasis badge badge-light h6 mb-0">SOFT</span>
                     <span class="text-light-emphasis badge badge-light h6 mb-0">MEDIUM</span>
@@ -215,7 +280,7 @@
                     <td class="h6">20'</td>
                 </tr>
                 <tr>
-                    <td><span class="log_percentage log_percentage_hi log_percentage_select text-light-emphasis h6 text-nowrap">HI-TENS</span></td>
+                    <td><span class="log_percentage log_percentage_HI-TENS log_percentage_select text-light-emphasis h6 text-nowrap">HI-TENS</span></td>
                     <td class="d-flex flex-column">
                     <span class="text-light-emphasis badge badge-light h6 mb-0">DYN</span>
                     </td>
@@ -224,7 +289,7 @@
                 </tr>
                 <tr>
                     <td rowspan="2" class="h6">Way 2</td>
-                    <td><span class="log_percentage log_percentage_ret log_percentage_select text-light-emphasis h6">RET</span></td>
+                    <td><span class="log_percentage log_percentage_RET log_percentage_select text-light-emphasis h6">RET</span></td>
                     <td class="d-flex flex-column">
                     <span class="text-light-emphasis badge badge-light h6 mb-0">SOFT</span>
                     <span class="text-light-emphasis badge badge-light h6 mb-0">MEDIUM</span>
@@ -233,7 +298,7 @@
                     <td class="h6">20'</td>
                 </tr>
                 <tr>
-                    <td><span class="log_percentage log_percentage_ret log_percentage_select text-light-emphasis h6">RET</span></td>
+                    <td><span class="log_percentage log_percentage_RET log_percentage_select text-light-emphasis h6">RET</span></td>
                     <td class="d-flex flex-column">
                     <span class="text-light-emphasis badge badge-light h6 mb-0">DYN</span>
                     </td>
