--- a/templates/device/_proto3.html.twig
+++ b/templates/device/_proto3.html.twig
@@ -1,12 +1,25 @@
 <div class="row d-flex justify-content-left">
-    <h4>Protocole 1 - 09:15 / 09:30</h4>
+    <h5><svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg> Patient 1 - 09:15 / 09:30</h5>
     <div class="table-responsive">
         <table class="table table-bordered table-device-mode text-center ">
+            <thead>
+                <tr>
+                    <td class="fw-bold" rowspan="2">Step</td>
+                    <td class="fw-bold" rowspan="2">Out</td>
+                    <td colspan="3" class="fw-bold">Mode Parameters</td>
+                    <td class="fw-bold" rowspan="2">Time (minutes)</td>
+                </tr>
+                <tr>
+                    <td class="fw-bold">Mode</td>
+                    <td class="fw-bold">Param 1</td>
+                    <td class="fw-bold">Param 2</td>
+                </tr>
+            </thead>
             <tbody>
                 <tr>
-                    <td rowspan="4"><span class="h5">Step 1</span></td>
+                    <td rowspan="2"><span class="h5">1</span></td>
                     <td rowspan="2" class="h6">Way 1</td>
-                    <td><span class="log_percentage log_percentage_ret log_percentage_select text-light-emphasis h6">RET</span></td>
+                    <td><span class="log_percentage log_percentage_RET log_percentage_select text-light-emphasis h6">RET</span></td>
                     <td class="d-flex flex-column">
                     <span class="text-light-emphasis badge badge-light h6 mb-0">SOFT</span>
                     <span class="text-light-emphasis badge badge-light h6 mb-0">MEDIUM</span>
@@ -15,7 +28,7 @@
                     <td class="h6">15'</td>
                 </tr>
                 <tr>
-                    <td><span class="log_percentage log_percentage_hi log_percentage_select text-light-emphasis h6 text-nowrap">HI-TENS</span></td>
+                    <td><span class="log_percentage log_percentage_HI-TENS log_percentage_select text-light-emphasis h6 text-nowrap">HI-TENS</span></td>
                     <td class="d-flex flex-column">
                     <span class="text-light-emphasis badge badge-light h6 mb-0">DYN</span>
                     </td>
