--- a/templates/device/_tab_phone.html.twig
+++ b/templates/device/_tab_phone.html.twig
@@ -7,11 +7,11 @@
         <div class="carousel-inner">
 
             <div class="carousel-item active">
-            <div class="d-flex justify-content-between my-2">
+            <div class="d-flex justify-content-between align-items-center my-5">
                 <button class="carousel-control-next btn btn-outline-orange" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
                     <i class="fa-solid fa-angle-left"></i>
                 </button>
-                <h6>12 Septembre 2023</h6>
+                <h5 class="m-0">12 Septembre 2023</h5>
                 <button class="carousel-control-next btn btn-outline-orange" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
                     <i class="fa-solid fa-angle-right"></i>
                 </button>
@@ -19,11 +19,11 @@
             {% include "device/_proto1.html.twig" %}
             </div>
             <div class="carousel-item">
-            <div class="d-flex justify-content-between my-2">
+            <div class="d-flex justify-content-between align-items-center my-5">
             <button class="carousel-control-next btn btn-outline-orange" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
                 <i class="fa-solid fa-angle-left"></i>
             </button>
-            <h6>13 Septembre 2023</h6>
+            <h5 class="m-0">13 Septembre 2023</h5>
             <button class="carousel-control-next btn btn-outline-orange" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
                 <i class="fa-solid fa-angle-right"></i>
             </button>
@@ -31,11 +31,11 @@
             {% include "device/_proto2.html.twig" %}
             </div>
             <div class="carousel-item">
-            <div class="d-flex justify-content-between my-2">
+            <div class="d-flex justify-content-between align-items-center my-5">
             <button class="carousel-control-next btn btn-outline-orange" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
                 <i class="fa-solid fa-angle-left"></i>
             </button>
-            <h6>14 Septembre 2023</h6>
+            <h5 class="m-0">14 Septembre 2023</h5>
             <button class="carousel-control-next btn btn-outline-orange" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
                 <i class="fa-solid fa-angle-right"></i>
             </button>
