--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -69,13 +69,13 @@
             <hr class="w-100 mt-5">
             <span class="d-flex text-nowrap justify-content-left align-items-center w-100"><svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg><h2 class="text-uppercase ms-1 mb-0" style="font-size: 21px;">Dashboard</h2></span>
             <div class="row h-100 mt-5 d-flex align-items-center justify-content-center">
-                <div class="col my-1" style="height: 25em; width: 30em;">
+                <div class="col my-1 d-flex align-items-center justify-content-center" style="height: 30em; width: 30em;">
                 {{ render_chart(firstChart) }}
                 </div>
-                <div class="col my-1" style="height: 25em; width: 30em;">
+                <div class="col my-1 d-flex align-items-center justify-content-center" style="height: 30em; width: 30em;">
                 {{ render_chart(secondChart) }}
                 </div>
-                <div class="col my-1" style="height: 100%;">
+                <div class="col my-1 d-flex align-items-center justify-content-center" style="height: 100%;">
                 {{ render_chart(thirdChart) }}
                 </div>
             </div>
