--- a/public/css/email.scss
+++ b/public/css/email.scss
@@ -68,3 +68,16 @@ t
 .margin-bottom {
     margin-bottom: 4em;
 }
+
+.span {
+    white-space: nowrap;
+}
+
+.table-mail {
+    border: solid;
+    .table-mail-cell {
+        padding: 0.5em 1em;
+        text-align: center;
+        border: 1px solid;
+    }
+}
