--- a/public/css/email.css
+++ b/public/css/email.css
@@ -59,6 +59,14 @@ t .footer-mail-items {
   text-align: center;
 }
 
+.h2-mail {
+  text-align: center;
+}
+
+.text-center {
+  text-align: center;
+}
+
 .margin-bottom {
   margin-bottom: 4em;
 }
@@ -69,6 +77,8 @@ t .footer-mail-items {
 
 .table-mail {
   border: solid;
+  margin-right: 1px;
+  margin-left: 1px;
 }
 .table-mail .table-mail-cell {
   padding: 0.5em 1em;
