--- a/public/css/email.scss
+++ b/public/css/email.scss
@@ -64,6 +64,14 @@ t
     margin-top: 4em;
     text-align: center;
 }
+.h2-mail {
+    //margin-top: 4em;
+    text-align: center;
+}
+
+.text-center {
+    text-align: center;
+}
 
 .margin-bottom {
     margin-bottom: 4em;
@@ -75,6 +83,8 @@ t
 
 .table-mail {
     border: solid;
+    margin-right: 1px; 
+    margin-left: 1px;
     .table-mail-cell {
         padding: 0.5em 1em;
         text-align: center;
