--- a/templates/error/index.html.twig
+++ b/templates/error/index.html.twig
@@ -8,12 +8,14 @@
         {#{% include "error/_filter.html.twig" %}#}
     </div>
     <div class="col-md-9 d-flex flex-column align-items-center">
-        <h1 class="text-center mb-4">{{ 'Error'|trans }}</h1>
+        <h1 class="row text-center mb-4">{{ 'Error'|trans }}</h1>
         {% for message in app.flashes('app-error-alert') %}
-            <div class="p-3 my-2 rounded-2 alert alert-danger">{{ message }}</div>
+            <div class="row p-3 my-2 rounded-2 alert alert-danger">{{ message }}</div>
         {% endfor %}
-        <div class="d-flex justify-content-around w-100">
-            <div>
+        {% include "error/dashboard.html.twig" %}
+        <div class="row d-flex justify-content-around w-100">
+        <hr class="w-100 mt-5">
+        <span id="snDashboard" class="d-flex text-nowrap justify-content-left align-items-center w-100 mb-5"><svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg><h2 class="text-uppercase ms-1 mb-0" style="font-size: 21px;">Table</h2></span>
                 <div class="table-responsive">
                     {# Table of all records #}
                     <table class="table table-striped table-bordered table-hover w-100">
@@ -38,11 +40,7 @@
                     </table>
                 </div>
                 {{ knp_pagination_render(errors) }}
-            </div>
-            <div>{{ render_chart(errorChart) }}</div>
         </div>
-
-
 
     </div>
 </div>
