--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -715,4 +715,30 @@ table.dataTable thead .sorting_desc_disabled:before {
 
 .protoChart {
   min-width: 15em;
+}
+
+/* Filter menus */
+.filterDropdown-content {
+  height: 10em;
+  overflow: scroll;
+  margin-left: 5px;
+}
+.filterDropdown-content .form-check {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: left;
+  width: 100% !important;
+}
+.filterDropdown-content .form-check-input {
+  margin-right: 1.5em;
+}
+
+/* Show the dropdown menu on hover */
+.filterDropdown:hover .filterDropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.filterDropdown:hover .filterDropbtn {
+  background-color: #f18841;
 }/*# sourceMappingURL=styles.css.map */
