--- a/templates/error/_sidenav.html.twig
+++ b/templates/error/_sidenav.html.twig
@@ -1,22 +1,19 @@
-
-
-
-    <ul class="nav nav-pills flex-column mb-auto">
-        <li class="nav-link">
-            {% include "error/_filter.html.twig" %}
-        </li>
-        <hr class="w-50">
+ <ul class="nav nav-pills flex-column mb-auto">
         <li>
-            <a href="#snTable" class="nav-link">
+            <a href="#errorDashboard" class="nav-link">
             <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg>
+            Dashboard
+            </a>
+        </li>
+        <li>
+            <a href="#errorTable" class="nav-link">
+            <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
             Table
             </a>
         </li>
-        <li>
-            <a href="#snDashboard" class="nav-link">
-            <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
-            Dashboard
-            </a>
+        <hr class="w-50">
+        <li class="nav-link">
+            {% include "error/_filter.html.twig" %}
         </li>
     </ul>
   
