--- a/templates/error/index.html.twig
+++ b/templates/error/index.html.twig
@@ -4,8 +4,9 @@
 
 {% block content %}
 <div class="row w-100 h-100">
-    <div class="col-md-3 d-flex flex-column justify-content-center sticky-scroll">
+    <div class="col-md-3 d-flex flex-column justify-content-center sticky-scroll h-100">
         {#{% include "error/_filter.html.twig" %}#}
+        {% include "error/_sidenav.html.twig" %}
     </div>
     <div class="col-md-9 d-flex flex-column align-items-center">
         <h1 class="row text-center mb-4">{{ 'Error'|trans }}</h1>
@@ -15,7 +16,7 @@
         {% include "error/dashboard.html.twig" %}
         <div class="row d-flex justify-content-around w-100">
         <hr class="w-100 mt-5">
-        <span id="snDashboard" class="d-flex text-nowrap justify-content-left align-items-center w-100 mb-5"><svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg><h2 class="text-uppercase ms-1 mb-0" style="font-size: 21px;">Table</h2></span>
+        <span id="errorTable" class="d-flex text-nowrap justify-content-left align-items-center w-100 mb-5"><svg width="7" height="15" viewBox="0 0 7 15" fill="none"><path d="M-0.000264168 0H3.14905L6.81055 7.49834L3.14905 15H-0.000264168L3.66123 7.49834L-0.000264168 0Z" fill="white"></path></svg><h2 class="text-uppercase ms-1 mb-0" style="font-size: 21px;">Table</h2></span>
                 <div class="table-responsive">
                     {# Table of all records #}
                     <table class="table table-striped table-bordered table-hover w-100">
