--- a/templates/protocol/index.html.twig
+++ b/templates/protocol/index.html.twig
@@ -4,19 +4,36 @@
 
 {% block content %}
 
-{% if protocols is empty %}
-<div class="container row">
-    <div class="col">
-    <h3>Protocols:</h3>
-    <div>Please choose a Serial Number to see your protocols:</div>
-    {{ form_start(searchForm, {attr: { id: 'filter', class: 'sticky-scroll'}}) }}
-        {{ form_row(searchForm.sn, {attr: { style: 'border-radius: 0;'}}) }}
-        <button type="submit" class="btn bg-orange btn-outline-orange">Submit</button>
-    {{ form_end(searchForm) }}
+
+<div class="container-fluid row h-100">
+    {% if protocols is not empty %}
+    <div class="col-md-3 d-flex flex-column justify-content-center sticky-scroll h-100">
+    {% include "protocol/_sidenav.html.twig" %}
     </div>
+    {% endif %}
+    {% if protocols is empty %}
+    <div class="col h-100">
+        <h3>Protocols:</h3>
+        <div>Please choose a Serial Number to see your protocols:</div>
+        {{ form_start(searchForm, {attr: { id: 'filter', class: 'sticky-scroll'}}) }}
+            {{ form_row(searchForm.sn, {attr: { style: 'border-radius: 0;'}}) }}
+            <button type="submit" class="btn bg-orange btn-outline-orange">Submit</button>
+        {{ form_end(searchForm) }}
+    </div>
+    {% else %}
+    
+    <div class="col">
+        {% include "protocol/dashboard.html.twig" %}
+        {% include "protocol/table.html.twig" %}
+    </div>
+    {% endif %}
 </div>
-{% else %}
-    {% include "protocol/dashboard.html.twig" %}
-{% endif %}
+
 
 {% endblock %}
+
+{#
+{% block javascripts %}
+    <script type="text/javascript" src="{{ asset('js/protocol.js')}}"></script>
+{% endblock %}
+#}
