--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -818,7 +818,7 @@ background: #eee;
 .filterDropdown-content {
     height: 10em;
     overflow: scroll;
-    margin-left: 5px;
+    //margin-left: 5px;
     .form-check {
         display: flex;
         flex-wrap: nowrap;
